add list favorite movies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Movie"
         tools:targetApi="31">
-        <activity
-            android:name=".presentation.MovieDetailActivity" />
+        <activity android:name=".presentation.FavoriteMoviesActivity" />
+        <activity android:name=".presentation.MovieDetailActivity" />
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true">
