screen with portrait orientation only

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Movie"
         tools:targetApi="31">
-        <activity android:name=".presentation.FavoriteMoviesActivity" />
-        <activity android:name=".presentation.MovieDetailActivity" />
+        <activity
+            android:name=".presentation.FavoriteMoviesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.MovieDetailActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
